* CHANGE teach hidden3d to handle double-headed vectors (arrowstyle "heads")
* CHANGE "unset title" or "reset" resets all title properties to default
* CHANGE font names passed to enhanced text processing may be in quotes
* CHANGE cairo terminals accept fractional font sizes
* CHANGE "plot with table" does not output trailing field separator
* CHANGE better centering for clustered histograms
* FIX "plot with table" unnecessarily limited string column output to 60 chars 
* FIX (windows) make sure graph window is shown even if the program is "hidden"
* FIX hidden3d mode was not correctly dealing with arrowstyle backhead
* FIX sprintf in 'using' spec must not clobber numeric locale
* FIX tikz - request for polygon with 0 vertices could hand terminal
* FIX lua/tikz - do not attempt to ftruncate output being piped through stdout
* FIX tkcanvas - do not attempt to ftruncate output being piped through stdout
* FIX handle NaN values in input stream to "stats FOO matrix"
* FIX prevent extra read past the end of a datablock holding matrix data
* FIX pm - issues in box and polygon fill, (wide) lines, enhanced text, images

Changes in 5.2.6
================
* NEW keyword "keyentry" places an entry in the key without actually plotting
* NEW "set style boxplot medianlinewidth <lw>"
* CHANGE drop non-working support for CIE/XYZ color space
* CHANGE strptime ignores content read with format a/A/w/W
* FIX various corner-case bugs and overruns found by fuzzing
* FIX revise waitforinput in x11 terminal
* FIX revise waitforinput and terminal close events in qt terminal
* FIX revise waitforinput and new window events in monothreaded wxt terminal
* FIX lua.trm compatibility with lua version 5.3
* FIX error line reporting inside an if/else bracketed clause
* FIX error in date conversion for times within a nanosecond of a year boundary

Changes in 5.2.5
================
* NEW "set pm3d depthorder base" sorts pm3d quadrangles by projecting to z=0