@@ -10,6 +10,7 @@ Changes in 5.2.7
 * CHANGE cairo terminals accept fractional font sizes
 * CHANGE "plot with table" does not output trailing field separator
 * CHANGE better centering for clustered histograms
+* CHANGE clear STATS_* variables before performing analysis
 * FIX "plot with table" unnecessarily limited string column output to 60 chars 
 * FIX (windows) make sure graph window is shown even if the program is "hidden"
 * FIX hidden3d mode was not correctly dealing with arrowstyle backhead
